--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -18,8 +18,8 @@
     <li><%= link_to "Nursery Seed sales", nursery_seed_sales_admin_reports_path %></li>
     <li><%= link_to "Direct Seeding sales", direct_seed_sales_admin_reports_path %></li>
     <li><%= link_to "Seed Containment", seed_containment_admin_reports_path %></li>
-    <li><%= link_to "Seeds on consigment", seeds_on_consignment_admin_reports_path %></li>
-    <li><%= link_to "Seeds on hold", admin_reports_path %></li>
+    <li><%= link_to "Seeds on Consigment", seeds_on_consignment_admin_reports_path %></li>
+    <li><%= link_to "Seeds on Hold", seeds_on_hold_admin_reports_path %></li>
   </ul>
 </li>
 <li class="dropdown">
