--- a/app/views/admin/reports/seeds_on_consignment.xls.erb
+++ b/app/views/admin/reports/seeds_on_consignment.xls.erb
@@ -25,6 +25,13 @@
 
       <% @deposits.each do |deposit| %>
 
+          <% if @current_collector && @current_collector != deposit.collector_id %>
+              <Row>
+                <Cell><Data ss:Type="String"></Data></Cell>
+              </Row>
+          <% end %>
+          <% @current_collector = deposit.collector_id %>
+
           <Row>
             <Cell><Data ss:Type="String"><%= deposit.collector.full_name %></Data></Cell>
             <Cell><Data ss:Type="String"><%= format_date deposit.date %></Data></Cell>
