--- a/app/views/admin/reports/seeds_on_hold.html.erb
+++ b/app/views/admin/reports/seeds_on_hold.html.erb
@@ -18,6 +18,12 @@
     <tbody>
 
     <% @deposits.each do |deposit| %>
+        <% if @current_collector && @current_collector != deposit.collector_id %>
+            <tr>
+              <td colspan="8"></td>
+            </tr>
+        <% end %>
+        <% @current_collector = deposit.collector_id %>
 
         <tr>
           <td><%= deposit.collector.full_name %></td>
