--- a/app/views/admin/reports/seed_deposits_by_date_entered.xls.erb
+++ b/app/views/admin/reports/seed_deposits_by_date_entered.xls.erb
@@ -7,7 +7,7 @@
   <Worksheet ss:Name="Sheet1">
     <Table>
       <Row>
-          <Cell><Data ss:Type="String">Seed Deposits by Collection Date</Data></Cell>
+          <Cell><Data ss:Type="String">Seed Deposits by Date Entered</Data></Cell>
           <Cell><Data ss:Type="String">For Period</Data></Cell>
           <Cell><Data ss:Type="String"><%= format_date params[:start_date].to_date %></Data></Cell>
           <Cell><Data ss:Type="String">to</Data></Cell>
