--- a/app/views/admin/reports/seed_deposits_by_date_entered.html.erb
+++ b/app/views/admin/reports/seed_deposits_by_date_entered.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, "Seed Deposits by Collection Date #{export_to_excel_link}".html_safe %>
+<%= content_for :page_title, "Seed Deposits by Date Entered  #{export_to_excel_link}".html_safe %>
 
 <%= render "date_filter" %>
 
