--- a/app/views/admin/reports/direct_seed_sales.xls.erb
+++ b/app/views/admin/reports/direct_seed_sales.xls.erb
@@ -45,7 +45,7 @@
             <Cell><Data ss:Type="String"><%= order_form.business_name %></Data></Cell>
             <Cell><Data ss:Type="String"><%= order_form.abn %></Data></Cell>
             <Cell><Data ss:Type="String"><%= order_form.property_address %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= order_form.user.try(:email)  %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= order_form.customer.try(:email)  %></Data></Cell>
             <Cell><Data ss:Type="Number"><%= order.line_items.sum(:qty).to_f / 1000 %></Data></Cell>
             <Cell><Data ss:Type="Number"><%= order.total %></Data></Cell>
             </Row>
