--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -39,3 +39,12 @@
 <table class="table table-striped col-md-12" id="header-fixed"></table>
 <%= paginate @orders %>
 
+
+<% if params[:n] %>
+    <script type="text/javascript">
+        $(function () {
+            $('#new_order').click();
+        })
+    </script>
+<% end %>
+
