--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= content_for :page_link do %>
     <%= link_to t('.new', :default => t("helpers.links.new")),
-                new_admin_order_path, remote: true,
+                new_admin_order_path, remote: true, id: 'new_order',
                 :class => 'btn btn-primary pull-right' %>
 <% end %>
 <%= content_for :page_title, "Orders" %>
