--- a/app/views/admin/orders/create.html.erb
+++ b/app/views/admin/orders/create.html.erb
@@ -1,8 +1,8 @@
 <div id="select-modal-body" class="modal-body">
 
-  <p class='loading'><%= link_to "Direct Seeding", new_customer_order_form_path(:type => "seeding", cid: @order.customer_id), class: "btn btn-primary" %>
+  <p class='loading'><%= link_to "Direct Seeding", new_customer_order_form_path(:type => "seeding", cid: @object.customer_id), class: "btn btn-primary" %>
 
-  <p class='loading'><%= link_to "Nursery", new_customer_order_form_path(:type => "nursery", cid: @order.customer_id), class: "btn btn-primary" %>
+  <p class='loading'><%= link_to "Nursery", new_customer_order_form_path(:type => "nursery", cid: @object.customer_id), class: "btn btn-primary" %>
   </p>
 </div>
 <div id="select-modal-footer" class="modal-footer">
