adds customer select

--- a/app/views/admin/order_forms/edit.html.erb
+++ b/app/views/admin/order_forms/edit.html.erb
@@ -1,6 +1,17 @@
 <div class="col-lg-12">
   <%= form_for @order_form, url: admin_order_form_path, as: :order_form, html: {class: "form-horizontal"} do |f| %>
+
+      <div class="form-group">
+        <%= f.label :customer_id, class: "col-sm-2" %>
+        <div class="col-sm-8">
+          <%= f.select :customer_id, Person::Customer.all.collect { |c| [c.full_name, c.id] }, {prompt: t(:please_select)}, class: "select2" %>
+        </div>
+      </div>
+
       <%= render partial: @order_form.type.demodulize.downcase, locals: {f: f} %>
+
+
+
       <div class="form-group">
         <div class="col-sm-10">
           <%= f.submit "Save", class: "btn btn-success pull-right", id: "action_button", disable_with: "Processing..." %>
