--- a/app/views/admin/people/_form.html.erb
+++ b/app/views/admin/people/_form.html.erb
@@ -1,4 +1,5 @@
 <div class="modal-body">
+<%= render_errors @object %>
   <div class="control-group">
     <%= f.label :first_name, :class => 'control-label' %>
     <div class="controls">
@@ -57,6 +58,6 @@
   <%= hidden_field_tag :type, (params[:q][:type_cont] rescue "") %>   <br>
 </div>
 <div class="modal-footer">
-  <%= link_to "Cancel", "javascript:;", :class => "pull-left", :data => {:dismiss => 'modal'} %>
+  <%= link_to "Cancel", admin_people_path(q: {type_cont: @type}), :class => "pull-left", :data => {:dismiss => 'modal'} %>
   <%= f.submit "Save", :class => 'btn btn-primary' %>
 </div>
