--- a/app/views/admin/orders/new.html.erb
+++ b/app/views/admin/orders/new.html.erb
@@ -21,7 +21,7 @@
         <div id="existing_customer_fields" class="field">
           <%= f.label :customer_id, "Select Customer" %>
           <br/>
-          <%= f.select :customer_id, Person::Customer.all.collect { |c| [c.full_name, c.id] }, {prompt: t(:please_select)}, class: "select2", disabled: !@order.pending? %>
+          <%= f.select :customer_id, Person::Customer.order(:last_name).collect { |c| [c.full_name, c.id] }, {prompt: t(:please_select)}, class: "select2", disabled: !@order.pending? %>
         </div>
 
         <div id="new_customer_fields" style="display: none;">
