field added on SPA and phone to reports

--- a/app/views/admin/reports/nursery_seed_sales.html.erb
+++ b/app/views/admin/reports/nursery_seed_sales.html.erb
@@ -15,6 +15,7 @@
           <th>ABN</th>
           <th>Postal Address</th>
           <th>Email Address</th>
+          <th>Phone</th>
           <th>Total Quantity (kg)</th>
           <th>Total ($)</th>
         </tr>
@@ -38,6 +39,7 @@
               <td><%= order_form.abn %></td>
               <td><%= order_form.property_address %></td>
               <td><%= order_form.customer.try(:email) %></td>
+              <td><%= order_form.customer.try(:phone) %></td>
               <td><%= order.line_items.sum(:qty).to_f / 1000 %></td>
               <td><%= order.total %></td>
             </tr>
