--- a/app/views/admin/reports/nursery_seed_sales.xls.erb
+++ b/app/views/admin/reports/nursery_seed_sales.xls.erb
@@ -25,6 +25,7 @@
         <Cell><Data ss:Type="String">ABN</Data></Cell>
         <Cell><Data ss:Type="String">Postal Address</Data></Cell>
         <Cell><Data ss:Type="String">Email Address</Data></Cell>
+        <Cell><Data ss:Type="String">Phone</Data></Cell>
         <Cell><Data ss:Type="String">Total Quantity (kg)</Data></Cell>
         <Cell><Data ss:Type="String">Total ($)</Data></Cell>
       </Row>
@@ -46,6 +47,7 @@
             <Cell><Data ss:Type="String"><%= order_form.abn %></Data></Cell>
             <Cell><Data ss:Type="String"><%= order_form.property_address %></Data></Cell>
             <Cell><Data ss:Type="String"><%= order_form.customer.try(:email)  %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= order_form.customer.try(:phone)  %></Data></Cell>
             <Cell><Data ss:Type="Number"><%= order.line_items.sum(:qty).to_f / 1000 %></Data></Cell>
             <Cell><Data ss:Type="Number"><%= order.total %></Data></Cell>
             </Row>
