--- a/app/views/home/catalogue_spa.html.erb
+++ b/app/views/home/catalogue_spa.html.erb
@@ -1,4 +1,3 @@
 <%= content_for :page_title, "SPA Catalogue #{export_to_excel_link}".html_safe %>
 
-<%= render partial: "table_header" %>
-<%= render partial: "table" %>
+<%= render partial: "spa_table" %>
