--- a/app/views/admin/deposits/_form.html.erb
+++ b/app/views/admin/deposits/_form.html.erb
@@ -49,6 +49,18 @@
       <%= f.text_field :qty_onhold %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :reference, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :reference, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :plant_population, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :plant_population, :class => 'text_field' %>
+    </div>
+  </div>
 
   <div class="control-group">
     <%= f.label :comments, "Comment", :class => 'control-label' %>
