--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -64,6 +64,10 @@
           <% unless (@current_user.role.downcase == "admin" rescue false) %>
               <li><%= link_to "Catalogue", catalogue_general_path %></li>
           <% end %>
+          <% unless (@current_user.role.downcase == "collector" rescue false) %>
+              <li><%= link_to "SPA", catalogue_spa_path %></li>
+          <% end %>
+
           <!--<li class="dropdown">-->
           <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogues-->
           <!--<i class="fa fa-angle-down parent-symbol"></i></a>-->
