--- a/app/views/layouts/v2/collector/_navbar.html.erb
+++ b/app/views/layouts/v2/collector/_navbar.html.erb
@@ -1,4 +1,12 @@
-<li><%= link_to "SPA", catalogue_spa_path %></li>
-      <li>
-      <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
-    </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogues
+    <i class="fa fa-angle-down parent-symbol"></i></a>
+  <ul class="dropdown-menu">
+    <li><%= link_to "Public", catalogue_general_path %></li>
+    <li><%= link_to "SPA", catalogue_spa_path %></li>
+  </ul>
+</li>
+
+<li>
+  <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
+</li>
