--- a/app/views/home/_spa_table.html.erb
+++ b/app/views/home/_spa_table.html.erb
@@ -30,8 +30,8 @@
         <td><%= deposit.lot_number.provenance %></td>
         <td><%= deposit.lot_number.location %></td>
         <td><%= deposit.lot_number.region %></td>
-        <td><%= deposit.reference.present? ? "#{deposit.reference}" : ""  %></td>
-        <td><%= deposit.plant_population.present? ? "#{deposit.plant_population}" : ""  %></td>
+        <td><%= deposit.try(:reference) %></td>
+        <td><%= deposit.plant_population %></td>
         <td><%= [deposit.total_quantity, 0].max %></td>
       </tr>
   <% end %>
