--- a/app/views/home/_spa_table.html.erb
+++ b/app/views/home/_spa_table.html.erb
@@ -30,7 +30,7 @@
         <td><%= deposit.lot_number.provenance %></td>
         <td><%= deposit.lot_number.location %></td>
         <td><%= deposit.lot_number.region %></td>
-        <% if deposit.reference.present? %>
+        <% if deposit.reference %>
           <td><%= deposit.try(:reference) %></td>
         <% end %>
         <td><%= deposit.plant_population %></td>
