--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,1 +1,52 @@
-<%= render template: "devise/sessions/new" %>
+<div class="col-lg-12">
+  <div class="col-lg-5">
+    <h2>Sign in</h2>
+
+    <%= form_for(User.new, as: resource_name, url: session_path(resource_name), html: {:autocomplete => "off"}) do |f| %>
+        <div><%= f.label :email %>
+          <br/>
+          <%= f.hidden_field :email %>
+          <%= f.email_field :email, autofocus: true, :autocomplete => 'off' %></div>
+        <div><%= f.label :password %>
+          <br/>
+          <%= f.hidden_field :password %>
+          <%= f.password_field :password, autocomplete: "off" %></div>
+        <% if devise_mapping.rememberable? -%>
+            <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+        <% end -%>
+        <div><%= f.submit "Sign in" %></div>
+    <% end %>
+    <%= render "devise/shared/links" %>
+  </div>
+
+  <div class="col-lg-2">
+    OR
+  </div>
+
+  <div class="col-lg-5">
+    <h2>Sign up</h2>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {:autocomplete => "off"}) do |f| %>
+        <%= devise_error_messages! %>
+
+        <div><%= f.label :email %>
+          <br/>
+          <%= f.hidden_field :email %>
+          <%= f.email_field :email, autofocus: true, :autocomplete => 'off' %></div>
+
+        <div><%= f.label :password %>
+          <br/>
+          <%= f.hidden_field :password %>
+          <%= f.password_field :password, autocomplete: "off" %></div>
+
+        <div><%= f.label :password_confirmation %>
+          <br/>
+          <%= f.hidden_field :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+        <br>
+
+        <div><%= f.submit "Sign up" %></div>
+    <% end %>
+  </div>
+
+</div>
