--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -36,6 +36,7 @@
     <li><%= link_to "Customer Profiles", admin_people_path(q: {:type_cont => "Customer"}) %></li>
     <li><%= link_to "Users", admin_users_path %></li>
     <li><%= link_to "Field Data Sheets", admin_deposits_path %></li>
+    <li><%= link_to "SPA entry SS", admin_spa_entries_path %></li>
     <li><%= link_to "Settings", admin_settings_path %></li>
     <li><%= link_to "CMS", "/cms-admin", target: "_blank" %></li>
 
