--- a/app/views/admin/spa_entries/index.html.erb
+++ b/app/views/admin/spa_entries/index.html.erb
@@ -6,3 +6,41 @@
   </br>
   <%= submit_tag "Import sheet" %>
 <% end %>
+
+<%= content_for :page_title, "SPA entry ss  #{export_to_excel_link}".html_safe %>
+
+<% if @lot_numbers.count == 0 %>
+<br>
+<br>
+No lot numbers are added using SPA entry SS.
+<% else %>
+  <table class="table table-striped marT30" id="table-1">
+    <thead>
+    <tr>
+      <th> Id </th>
+      <th> Nunmber </th>
+      <th><%= "SPA Name" %></th>
+      <th><%= "Heritage Lot Numbers" %></th>
+      <th>Region</th>
+      <th>Provenance</th>
+      <th>Location</th>
+      <th>SPA entry number</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @lot_numbers.each do |lot_number| %>
+        <tr>
+          <td><%= lot_number.id %></td>
+          <td><%= lot_number.number %></td>
+          <td><%= (lot_number.spa_name.blank? ? "NA" : lot_number.spa_name) %></td>
+          <td><%= lot_number.heritage_lot_numbers %></td>
+          <td><%= lot_number.region %></td>
+          <td><%= lot_number.provenance %></td>
+          <td><%= lot_number.location %></td>
+          <td><%= lot_number.mass_num %></td>
+        </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <table class="table table-striped col-md-12" id="header-fixed"></table>
+<% end %>
