--- a/app/views/home/_spa_table.html.erb
+++ b/app/views/home/_spa_table.html.erb
@@ -1,4 +1,4 @@
-<table class="table-bordered" id="table-1">
+<table class="table-bordered table-striped" id="table-1">
   <thead>
   <tr class="bold-black">
     <th>SEED CATALOGUE</th>
@@ -37,4 +37,4 @@
   <% end %>
   </tbody>
 </table>
-<table class="table-striped col-md-12" id="header-fixed"></table>
+<table class="table-bordered table-striped col-md-12" id="header-fixed"></table>
